--- a/index.html
+++ b/index.html
@@ -55,15 +55,11 @@
                     </div>
                     <div class="col2">
                         <a href="#">Home</a>
-                        <a href="#">News</a>
-                        <a href="#">Events</a>
-                        <a href="#">Academics</a>
-                        <a href="#">Research</a>
-                        <a href="#">Alumni</a>
-                        <a href="#">Campus</a>
-                        <a href="#">Admission</a>
                         <a href="#">About us</a>
+                        <a href="#">Admission</a>
+                        <a href="#">News</a>
                         <a href="#">Gallery</a>
+                        <a href="#">Contact Us</a>
 
                     </div>
                     <div class="col3">
@@ -161,6 +157,42 @@
                             <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
                             <div class="part1">
                                 <h4>civil & environmental <br> engineering department</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
                             </div>
                             <div class="part2">
                                 <div class="col1">
@@ -318,10 +350,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
-                                quisquam
-                                possimus sint.</p>
+                            <span>How to Beat <br> Anti-Incumbency</span>
+                            <p>A more realistic mathematical model has been developed by Mrinal Ghosh and his collaborators, one which considers inflation as having a fluctuating value, given by a stochastic differential equation.</p>
                         </div>
                     </div>
                     <div class="item">
@@ -330,10 +360,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
-                                quisquam
-                                possimus sint.</p>
+                            <span>Understanding <br>Climate Change</span>
+                            <p>In a new study, Govindasamy Bala—one of India’s most well-known climate scientists—and his student, Angshuman  Modak, addressed the issue of the efficacy of the incident solar radiation relative to CO2.*</p>
                         </div>
                     </div>
                     <div class="item">
@@ -342,10 +370,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
-                                quisquam
-                                possimus sint.</p>
+                            <span>Design inspired <br>by nature</span>
+                            <p>a materials engineer who has done pioneering work in the field of crystal structures, and Debiprosad Roy Mahapatra, an aeronautical engineer who works on engineering mechanics...</p>
                         </div>
                     </div>
                     <div class="item">
@@ -354,10 +380,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
-                                quisquam
-                                possimus sint.</p>
+                            <span>nanoengineering is <br>changing our world</span>
+                            <p>studies structures that are so small that they have properties very different from those in the macro-world. The current focus of his group is to understand the dynamics of micro and nanoscale mechanical structures, such as beams, plates, membranes etc.</p>
                         </div>
                     </div>
                     <div class="item">
@@ -366,10 +390,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio, atque
-                                quisquam
-                                possimus sint.</p>
+                            <span>Visualizing <br>data</span>
+                            <p>Scientific data─such as those arising from imaging devices and computational experiments in science and engineering disciplines─is increasingly becoming larger in size and richer in its features.</p>
                         </div>
                     </div>
                     <div class="item">
@@ -378,9 +400,8 @@
                                 alt="">
                         </div>
                         <div class="textdiv">
-                            <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic
-                                odio,quisquam<br>possimus sint.</p>
+                            <span>Going for <br>Gold</span>
+                            <p>Using advanced microscopy techniques like transmission electron microscopy, N Ravishankar and his team study nanostructures, especially how they form, grow and attain specific shapes.</p>
                         </div>
                     </div>
 
@@ -632,53 +653,55 @@
         <div class="page9">
             <div class="row1">
                 <h1>new & articles</h1>
-                <p>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Laudantium eum ad voluptate?</p>
+                <p>For any news or event to be uploaded please go to Submit Content page and submit.</p>
             </div>
             <div class="row2">
                 <div class="owl-carousel owl-theme myowl">
                     <div class="item myown">
                         <div class="row-1">
-                            <h6>/Bachelor</h6>
+                            <h6>12Feb24</h6>
                             <i class="fa-solid fa-square-up-right"></i>
                         </div>
                         <div class="row-2">
-                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                            <h2><a href="https://iisc.ac.in/events/iisc-and-blockchain-for-impact-bfi-collaborate-to-accelerate-biomedical-innovation/">IISc and Blockchain For Impact (BFI) Collaborate to Accelerate Biomedical Innovation</a></h2>
                         </div>
                     </div>
                     <div class="item myown">
                         <div class="row-1">
-                            <h6>/Bachelor</h6>
+                            <h6>27Mar24</h6>
                             <i class="fa-solid fa-square-up-right"></i>
                         </div>
                         <div class="row-2">
-                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                            <h2><a href="https://iisc.ac.in/events/paving-new-paths-for-sustainable-construction/">Paving new paths for sustainable construction
+                            </a></h2>
                         </div>
                     </div>
                     <div class="item myown">
                         <div class="row-1">
-                            <h6>/Bachelor</h6>
+                            <h6>12Apr24</h6>
                             <i class="fa-solid fa-square-up-right"></i>
                         </div>
                         <div class="row-2">
-                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                            <h2><a href="https://iisc.ac.in/events/novel-hydrogel-removes-microplastics-from-water/">Novel hydrogel removes microplastics from water</a></h2>
                         </div>
                     </div>
                     <div class="item myown">
                         <div class="row-1">
-                            <h6>/Bachelor</h6>
+                            <h6>22May24</h6>
                             <i class="fa-solid fa-square-up-right"></i>
                         </div>
                         <div class="row-2">
-                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                            <h2><a href="https://iisc.ac.in/events/fujitsu-limited-and-iisc-sign-mou-for-collaboration-in-data-science/">Fujitsu Limited and IISc sign MoU for collaboration in data science
+                            </a></h2>
                         </div>
                     </div>
                     <div class="item myown">
                         <div class="row-1">
-                            <h6>/Bachelor</h6>
+                            <h6>30May24</h6>
                             <i class="fa-solid fa-square-up-right"></i>
                         </div>
                         <div class="row-2">
-                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                            <h2><a href="https://iisc.ac.in/events/novel-method-for-mass-production-of-recombinant-proteins/">Novel method for mass production of recombinant proteins.</a></h2>
                         </div>
                     </div>
 
