--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col2">
                         <a href="#">Home</a>
-                        <a href="#">About us</a>
+                        <a href="./About us/index.html">About us</a>
                         <a href="#">Admission</a>
                         <a href="#">News</a>
                         <a href="#">Gallery</a>
