--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="#">Admission</a>
                         <a href="#">News</a>
                         <a href="#">Gallery</a>
-                        <a href="#">Contact Us</a>
+                        <a href="./contactUs/index.html">Contact Us</a>
 
                     </div>
                     <div class="col3">
