some changes completed successfully

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
+        integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <main>
+
+        <!-- <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
+            </ul>
+        </nav> -->
+        <div class="container">
+            <div class="title">
+                <h1> Our Gallery</h1>
+            </div>
+            <div class="col1">
+                <i id="img1"
+                    data-="https://images.unsplash.com/photo-1713250914323-97e18c9a367f?q=80&w=2510&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Architecture</i>
+                <i id="img2"
+                    data-="https://images.unsplash.com/photo-1494351651467-29e2791a2cee?q=80&w=2691&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Campus</i>
+                <i id="img3"
+                    data-="https://images.unsplash.com/photo-1606761568499-6d2451b23c66?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> ClassRooms</i>
+                <i id="img4"
+                    data-="https://images.unsplash.com/photo-1498243691581-b145c3f54a5a?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Library</i>
+                <i id="img5"
+                    data-="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2626&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Academic Hat</i>
+            </div>
+            <div class="col2"></div>
+            <div class="col3">
+                <i id="img6"
+                    data-="https://images.unsplash.com/photo-1599943821034-8cb5c7526922?q=80&w=2559&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> FareWell</i>
+                <i id="img7"
+                    data-="https://images.unsplash.com/photo-1620458930576-3e18328ce1ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Canteen</i>
+                <i id="img8"
+                    data-="https://plus.unsplash.com/premium_photo-1661962915138-c10a03d4ae28?q=80&w=2671&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="ri-image-fill"> Parking</i>
+                <i id="img9"
+                    data-="https://www.rajagiritech.ac.in/home/Amenities/images/AJ_03837.jpg"
+                    class="ri-image-fill"> Auditorium</i>
+                <i id="img10"
+                    data-="https://i.pinimg.com/originals/01/15/e7/0115e7b493fc38a3768e131248221f43.jpg"
+                    class="ri-image-fill"> Sport Ground</i>
+            </div>
+        </div>
+    </main>
+    <script src="script.js"></script>
 </body>
+
 </html>
