--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <div class="part-small"><a href="tel:9876543210"><i class="fa-solid fa-phone"></i></a></div>
 
                     <div class="part3">
-                        <div class="part1-div"><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
-                        <div class="part1-div"><a href="#"><i class="fa-brands fa-square-instagram"></i></a></div>
-                        <div class="part1-div"><a href="#"><i class="fa-brands fa-twitter"></i></a></a></div>
+                        <div class="part1-div"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
+                        <div class="part1-div"><a href="https://instagram.com"><i class="fa-brands fa-square-instagram"></i></a></div>
+                        <div class="part1-div"><a href="https://www.x.com"><i class="fa-brands fa-twitter"></i></a></a></div>
                     </div>
                 </div>
                 <div class="row2 for-hover">
@@ -54,11 +54,11 @@
 
                     </div>
                     <div class="col2">
-                        <a href="#">Home</a>
+                        <a href="./index.html">Home</a>
                         <a href="./About us/index.html">About us</a>
-                        <a href="#">Admission</a>
-                        <a href="#">News</a>
-                        <a href="#">Gallery</a>
+                        <a href="./AdmissionForm/index.html">Admission</a>
+                        <a href="./News/index.html">News</a>
+                        <a href="./Gallery/index.html">Gallery</a>
                         <a href="./contactUs/index.html">Contact Us</a>
 
                     </div>
