--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
             </div>
             <div class="row2">
                 <div class="col1 image-containerfor-row2"></div>
-                <div class="col2 image-containerfor-row2">
+                <div class="col2 image-containerfor-row2 box">
                     <div class="imgdets"><h1>What does university <br>teach us?</h1>
                     <p>However, college life teaches you to love you more and give importance to the areas that make you happy. And the best part among that is following your passions. Rather than sticking to your comfort zone, the campus life gives the spark to always try something new in life.</p></div>
                     <img src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
                         alt=""></div>
-                <div class="col3 image-containerfor-row2">
+                <div class="col3 image-containerfor-row2 box">
                     <div class="imgdets"><h1>What is the importance of <br>the campus?</h1>
                     <p>The Importance Of Having A Good School Campus. If schooling is important, so is the school campus and its surroundings. " School is a building with four walls which has tomorrow inside," is a frequently quoted one-line saying about schools. That said, any space or place can be used to impart knowledge.</p></div><img
                         src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
                         alt=""></div>
             </div>
             <div class="row3 ">
-                <div class="col1 image-containerfor-row2">
+                <div class="col1 image-containerfor-row2 box">
                     <div class="imgdets"><h1>Why is it important to have <br>a degree?</h1>
                     <p>Research suggests that: Graduates enjoy higher quality jobs than non-graduates. Graduates enjoy better health outcomes, by being less likely to smoke, more likely to exercise, and less prone to depression.</p></div><img
                         src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
                         alt=""></div>
-                <div class="col2 image-containerfor-row2">
+                <div class="col2 image-containerfor-row2 box">
                     <div class="imgdets"><h1>Why is the library important <br>in university?</h1>
                     <p>Libraries serve as knowledge reservoirs by holding substantial collections of books, periodicals, research papers, and other academic materials. They give instructors and students access to a wide range of data that is essential for self-improvement, research, and coursework.</p></div><img
                         src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
